# pioneer-takehome

./: .gitignore  CLAUDE.md  README.md  Snakefile  config.yaml  gff_analysis.py  hello.py  parsed_overlaps.csv  pyproject.toml  report-barcodes.ipynb  report.ipynb
output/bam/: YCZ4B8_11_m.S.00207.bam  YCZ4B8_11_m.S.00207.bam.bai  YCZ4B8_12_m.S.00211.bam  YCZ4B8_12_m.S.00211.bam.bai  YCZ4B8_13_m.S.00215.bam  YCZ4B8_13_m.S.00215.bam.bai  YCZ4B8_14_m.S.00219.bam  YCZ4B8_14_m.S.00219.bam.bai  YCZ4B8_15_m.S.00223.bam  YCZ4B8_15_m.S.00223.bam.bai  YCZ4B8_16_m.S.00227.bam  YCZ4B8_16_m.S.00227.bam.bai  YCZ4B8_17_m.S.00231.bam  YCZ4B8_17_m.S.00231.bam.bai  YCZ4B8_18_m.S.00235.bam  YCZ4B8_18_m.S.00235.bam.bai  YCZ4B8_1_m.S.00167.bam  YCZ4B8_1_m.S.00167.bam.bai  YCZ4B8_2_m.S.00171.bam  YCZ4B8_2_m.S.00171.bam.bai  YCZ4B8_3_m.S.00175.bam  YCZ4B8_3_m.S.00175.bam.bai  YCZ4B8_8_m.S.00195.bam  YCZ4B8_8_m.S.00195.bam.bai  YCZ4B8_9_m.S.00199.bam  YCZ4B8_9_m.S.00199.bam.bai
output/barcodes/: YCZ4B8_11_m.S.00207.tsv  YCZ4B8_12_m.S.00211.tsv  YCZ4B8_14_m.S.00219.tsv  YCZ4B8_15_m.S.00223.tsv  YCZ4B8_16_m.S.00227.tsv  YCZ4B8_17_m.S.00231.tsv  YCZ4B8_18_m.S.00235.tsv  YCZ4B8_1_m.S.00167.tsv  YCZ4B8_2_m.S.00171.tsv  YCZ4B8_3_m.S.00175.tsv  YCZ4B8_8_m.S.00195.tsv  (+1 more)
refs/: barcodes.txt  c.00185.pTwist_BsT-mStayGold_Barcode-GG.gb  c.00186.pTwist_BsT-mStayGold_Barcode-GG-MetagenomicLib.gb
reports/: YCZ4B8_12_m.S.00211.overlaps_overlaps.csv  YCZ4B8_14_m.S.00219.overlaps_overlaps.csv  YCZ4B8_9_m.S.00199.overlaps_overlaps.csv  all_overlaps.csv
scripts/: gff-analysis.py
workflow/: Snakefile
(+89 files in other folders)
