[project]
name = "pioneer-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "cutadapt>=5.0",
    "gffutils>=0.13",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "snakemake>=8.30.0",
    "tqdm>=4.67.1",
]
